tests/parser/invalid/syntax_errors/test_missing_semicolon.src
fn f() { int x = 5 }
